--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "a framework of webpack",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack-dev-server --devtool eval --progress --colors",
+    "dev": "webpack-dev-server --devtool eval --progress --colors --inline --hot",
+    "start": "webpack-dev-server --devtool eval --progress --colors",
     "deploy": "NODE_ENV=production webpack -p",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -21,14 +22,17 @@
     "url": "https://github.com/kunkuntang/webpack/issues"
   },
   "homepage": "https://github.com/kunkuntang/webpack#readme",
-  "dependencies": {},
+  "dependencies": {
+    "webpack-dev-server": "^2.4.2"
+  },
   "devDependencies": {
     "babel-core": "^6.0.0",
     "babel-loader": "^6.0.0",
     "babel-preset-es2015": "^6.0.0",
     "css-loader": "^0.28.0",
+    "open-browser-webpack-plugin": "^0.0.5",
     "style-loader": "^0.16.1",
-    "webpack": "^2.4.1",
-    "webpack-dev-server": "^2.4.2"
+    "uglifyjs-webpack-plugin": "^0.4.3",
+    "webpack": "^2.4.1"
   }
 }
