--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "a framework of webpack",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack-dev-server --devtool eval --progress --colors --inline --hot",
-    "start": "webpack-dev-server --devtool eval --progress --colors",
+    "dev": "webpack-dev-server --devtool eval --progress --colors",
+    "mutiply": "webpack-dev-server --devtool eval --progress --colors --inline --hot",
+    "build": "webpack",
     "deploy": "NODE_ENV=production webpack -p",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -22,17 +23,19 @@
     "url": "https://github.com/kunkuntang/webpack/issues"
   },
   "homepage": "https://github.com/kunkuntang/webpack#readme",
-  "dependencies": {
-    "webpack-dev-server": "^2.4.2"
-  },
+  "dependencies": {},
   "devDependencies": {
     "babel-core": "^6.0.0",
     "babel-loader": "^6.0.0",
     "babel-preset-es2015": "^6.0.0",
     "css-loader": "^0.28.0",
+    "html-webpack-plugin": "^2.28.0",
     "open-browser-webpack-plugin": "^0.0.5",
+    "raw-loader": "^0.5.1",
+    "shelljs": "^0.7.7",
     "style-loader": "^0.16.1",
     "uglifyjs-webpack-plugin": "^0.4.3",
-    "webpack": "^2.4.1"
+    "webpack": "^2.4.1",
+    "webpack-merge": "^4.1.0"
   }
 }
